--- a/src/app/seller/pages/seller-invoices-page/seller-invoices-page.component.css
+++ b/src/app/seller/pages/seller-invoices-page/seller-invoices-page.component.css
@@ -187,6 +187,9 @@ margin-top: 14px;
     padding: 8px;
   }
   .page-heading-holder>.sort-btn>.mat-stroked-button{
+    display: none;
+  }
+  .mobile-name>.mat-stroked-button{
     width:auto;
   height: 45px;
   border: 2px solid #1F4F9E;
@@ -198,6 +201,7 @@ margin-top: 14px;
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
+  display: block !important;
   }
  
 }
